--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <br>
     <div class="button1">
     <button class="button" id="add_task" onclick="addTask()">Add Task</button>
+    <button class="button" id="saveButton" style="display: none;">Save</button>
     <br>
     <br>
     <button class="button" id="edit" onclick="edit()">Edit</button>
