--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
     <br>
     <br>
     <button class="button" id="edit" onclick="edit()">Edit</button>
-    <button class="button" id="delete" onclick="del()">Delete</button>
+    <button class="button" id="delete">Delete</button>
     <button class="button" id="sort" onclick="sort()">Sort</button>
 <br>
 <br>
     </div >
     <div class="wrap">
-    
+    <button class = "barButton" id = "homePage">Home Page</button>
     <button class="searchbutton" onclick="search()">
         <img src="./font/search.png" height="20px" alt="search"/>
    
     </button>
     <input type="text" id="searchTerm" placeholder="Search">
+    <button class = "barButton" id ="addTask" onclick="add()">Add Task</button>
+     | 
+    <button class = "barButton" id ="Sort">Sort</button>
     </div>
     
     <ol id="task_list">
