--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html onload="onLoad">
+<html>
 
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1560183548178955"
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body onload="onLoad()">
     <header>
         <h1 lang="en">TO DO LIST</h1>
     </header>
@@ -46,10 +46,7 @@
     <ol id="task_list">
         
     </ol>
-    <form onsubmit="onSubmit()">
-        <input type="checkbox" class="input" placeholder="sdfs">
-    </form>
-   
+      
 </body>
 
 </html>
